@@ -2,13 +2,14 @@ import org.apache.tools.ant.taskdefs.condition.Os
 import org.apache.tools.ant.filters.*
 
 plugins {
-  id 'com.github.spotbugs' version '5.0.14' apply false
-  id 'org.owasp.dependencycheck' version '8.2.1' apply false
+  id "com.github.spotbugs" version "5.2.1" apply false
+  id "org.sonarqube" version "4.4.1.3373"
+  id "org.owasp.dependencycheck" version "8.4.2" apply false
 }
 
 ext {
-  interlokCoreVersion = project.findProperty('interlokCoreVersion') ?: '4.8-SNAPSHOT'
-  releaseVersion = project.findProperty('releaseVersion') ?: '4.8-SNAPSHOT'
+  interlokCoreVersion = project.findProperty('interlokCoreVersion') ?: '5.0-SNAPSHOT'
+  releaseVersion = project.findProperty('releaseVersion') ?: '5.0-SNAPSHOT'
   nexusBaseUrl = project.findProperty('nexusBaseUrl') ?: 'https://nexus.adaptris.net/nexus'
   mavenPublishUrl = project.findProperty('mavenPublishUrl') ?: nexusBaseUrl + '/content/repositories/snapshots'
   javadocsBaseUrl = nexusBaseUrl + "/content/sites/javadocs/com/adaptris"
@@ -20,9 +21,9 @@ ext {
   offlineJavadocPackageDir = new File(project.buildDir, "offline-javadoc-packages")
 
   organizationName = "Adaptris Ltd"
-  springVersion = '5.3.26'
-  slf4jVersion = '2.0.3'
-  mockitoVersion = '4.9.0'
+  springVersion = '5.3.27'
+  slf4jVersion = '2.0.9'
+  mockitoVersion = '5.2.0'
 }
 
 ext.hostname = { ->
@@ -32,15 +33,18 @@ ext.hostname = { ->
   return System.getenv("HOSTNAME")
 }
 
+// If graphviz is installed via scoop, plantuml doesn't find it because it's not
+// in its expected "location(s)" it searches for c:\*\graphviz**\dot.exe
+// so windows we'd expect to have the GRAPHVIZ_DOT env defined 
+// On Linux we should be able to find it via the path.
 ext.hasGraphViz = { ->
-//  def app = "dot"
-//  if (Os.isFamily(Os.FAMILY_WINDOWS)) {
-//    app = app + ".exe"
-//  }
-//  return System.getenv("PATH").split(File.pathSeparator).any{
-//    java.nio.file.Paths.get("${it}").resolve(app).toFile().exists()
-//  }
-  return false
+  def app = "dot"
+  if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+    app = app + ".exe"
+  }
+  return System.getenv("GRAPHVIZ_DOT") !=null ||  System.getenv("PATH").split(File.pathSeparator).any{
+    java.nio.file.Paths.get("${it}").resolve(app).toFile().exists()
+  }
 }
 
 ext.gitBranchNameOrTimestamp = { branchName ->
@@ -74,6 +78,14 @@ task clean(type: Delete) {
   delete project.buildDir
 }
 
+sonar {
+  properties {
+    property "sonar.projectKey", "adaptris_interlok-jmx-jms"
+    property "sonar.organization", "adaptris-org"
+    property "sonar.host.url", "https://sonarcloud.io"
+  }
+}
+
 allprojects {
   tasks.withType(Jar) {
     metaInf {
@@ -89,14 +101,15 @@ allprojects {
 }
 
 subprojects { subproject ->
-  apply plugin: 'java-library'
-  apply plugin: 'maven-publish'
+  apply plugin: "java-library"
+  apply plugin: "maven-publish"
   apply plugin: "jacoco"
-  apply plugin: 'com.github.spotbugs'
-  apply plugin: 'org.owasp.dependencycheck'
+  apply plugin: "com.github.spotbugs"
+  apply plugin: "org.sonarqube"
+  apply plugin: "org.owasp.dependencycheck"
 
-  sourceCompatibility = JavaVersion.VERSION_11
-  targetCompatibility = JavaVersion.VERSION_11
+  sourceCompatibility = JavaVersion.VERSION_17
+  targetCompatibility = JavaVersion.VERSION_17
   group   = 'com.adaptris'
   version = releaseVersion
   def versionDir = "$buildDir/version"
@@ -143,7 +156,7 @@ subprojects { subproject ->
   dependencies {
     api ("org.glassfish.external:opendmk_jmxremote_optional_jar:1.0-b01-ea")
     api ("commons-lang:commons-lang:2.6")
-    api ("org.apache.commons:commons-lang3:3.12.0")
+    api ("org.apache.commons:commons-lang3:3.13.0")
     api ("org.apache.geronimo.specs:geronimo-jms_1.1_spec:1.1.1")
     api ("org.springframework:spring-jms:$springVersion")
     api ("org.springframework:spring-beans:$springVersion") { transitive=false}
@@ -151,14 +164,14 @@ subprojects { subproject ->
     api ("org.springframework:spring-context:$springVersion") { transitive=false}
     api ("org.springframework:spring-aop:$springVersion") { transitive=false}
     api ("com.thoughtworks.xstream:xstream:1.4.20")
-    api ("commons-io:commons-io:2.11.0")
+    api ("commons-io:commons-io:2.15.0")
     implementation ("aopalliance:aopalliance:1.0")
     implementation ("org.slf4j:slf4j-api:$slf4jVersion")
 
-    umlDoclet("nl.talsmasoftware:umldoclet:1.1.4")
+    umlDoclet("nl.talsmasoftware:umldoclet:2.1.0")
     annotationProcessor ("com.adaptris:interlok-core-apt:$interlokCoreVersion") {changing= true}
 
-    testImplementation ('junit:junit:4.13.2')
+    testImplementation ("org.junit.jupiter:junit-jupiter-engine:5.10.0")
     testImplementation ("org.slf4j:jcl-over-slf4j:$slf4jVersion")
     testImplementation ("org.slf4j:slf4j-simple:$slf4jVersion")
 
@@ -175,8 +188,7 @@ subprojects { subproject ->
     configure(options) {
       taglets = ["com.adaptris.taglet.ConfigTaglet", "com.adaptris.taglet.LicenseTaglet"]
       options.addStringOption "tagletpath", configurations.javadoc.asPath
-      options.addStringOption('Xdoclint:none', '-quiet')
-      options.addBooleanOption "-no-module-directories", true
+      options.addStringOption "Xdoclint:none", "-quiet"
     }
   }
 
@@ -192,25 +204,15 @@ subprojects { subproject ->
     configure(options) {
       taglets = ["com.adaptris.taglet.ConfigTaglet", "com.adaptris.taglet.LicenseTaglet"]
       options.addStringOption "tagletpath", configurations.javadoc.asPath
-      options.addBooleanOption "-no-module-directories", true
-      options.addStringOption('Xdoclint:none', '-quiet')
+      options.addStringOption "Xdoclint:none", "-quiet"
       options.docletpath = configurations.umlDoclet.files.asType(List)
       options.doclet = "nl.talsmasoftware.umldoclet.UMLDoclet"
-      options.addStringOption "umlBasePath", destinationDir.getCanonicalPath()
+      // Create class & package use pages
+      options.addStringOption "use"    
       options.addStringOption "umlImageFormat", "SVG"
-      options.addStringOption "umlExcludedReferences", "java.lang.Exception,java.lang.Object,java.lang.Enum"
-      options.addStringOption "umlIncludePrivateClasses","false"
-      options.addStringOption "umlIncludePackagePrivateClasses","false"
-      options.addStringOption "umlIncludeProtectedClasses","false"
-      options.addStringOption "umlIncludeAbstractSuperclassMethods","false"
-      options.addStringOption "umlIncludeConstructors","false"
-      options.addStringOption "umlIncludePublicFields","false"
-      options.addStringOption "umlIncludePackagePrivateFields","false"
-      options.addStringOption "umlIncludeProtectedFields", "false"
-      options.addStringOption "umlIncludeDeprecatedClasses", "false"
-      options.addStringOption "umlIncludePrivateInnerClasses", "false"
-      options.addStringOption "umlIncludePackagePrivateInnerClasses", "false"
-      options.addStringOption "umlIncludeProtectedInnerClasses","false"
+      options.addStringOption "umlExcludedTypeReferences", "java.lang.Exception,java.lang.Object,java.lang.Enum,java.lang.annotation.Annotation"
+      options.addStringOption "umlJavaBeanPropertiesAsFields"
+      options.addBooleanOption "failOnCyclicPackageDependencies", false
     }
   }
 
@@ -284,8 +286,6 @@ subprojects { subproject ->
 	excludeFilter = new File("$rootDir/gradle/spotbugs-exclude.xml")
   }
 
-  // disable spotbugsTests which checks our test code..
-  spotbugsTest.enabled = false
   dependencyCheck  {
     suppressionFiles= [ "https://raw.githubusercontent.com/adaptris/interlok/develop/gradle/owasp-exclude.xml" , "$rootDir/gradle/owasp-exclude.xml"]
     scanConfigurations = [ "api", "compileClasspath", "runtimeClasspath" ]
@@ -299,12 +299,20 @@ subprojects { subproject ->
   }
 
   jacocoTestReport {
-      reports {
-        xml.required= true
-        html.required= true
-      }
+    reports {
+      xml.required= true
+      html.required= true
+    }
+  }
+  
+  test {
+    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED', '--add-opens', 'java.base/java.util=ALL-UNNAMED', '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED', '--add-opens', 'java.management/javax.management=ALL-UNNAMED']
+    useJUnitPlatform()
   }
 
+  // disable spotbugsTests which checks our test code..
+  spotbugsTest.enabled = false
+  
   javadoc.dependsOn umlJavadoc
   check.dependsOn jacocoTestReport
   clean.dependsOn deleteGeneratedFiles
